* deattach the ims-core and ims, now ims-core was packaged to ims-blogging as a service. ims is to be a front-end server to invoke the ims-blogging service using soap/http.

--- a/ims-web/src/main/webapp/resources/css/profile.css
+++ b/ims-web/src/main/webapp/resources/css/profile.css
@@ -9,7 +9,12 @@
   background: #B9EE6B;
   margin-top: 10px;
  }
-  
+ 
+#profile p {
+  font-size: 14px;
+  margin: 5px;
+}
+ 
  #profile h1{
   margin: 0 0 0 0px;
   border-bottom: 2px dotted #bbbbbb;
